--- a/main.css
+++ b/main.css
@@ -25,19 +25,19 @@ margin-bottom: 30px;
 }
 
 .img1 {
-    background-color:brown ;
+    background-color: aqua ;
 }
 
 .img2 {
-    background-color: aqua;
+    background-color: cornflowerblue;
 }
 
 .img3 {
-    background-color: red;
+   background-color: coral;
 
 }
 .img4 {
-    background-color: blueviolet;
+    background-color: darkgray;
 }
 
 .column {
